// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEET ## NATIVE ## 01 null 1`] = `null`;

exports[`SHEET ## NATIVE ## 02 {} 1`] = `Object {}`;

exports[`SHEET ## NATIVE ## 03 backgroundColor: 'red' 1`] = `
Object {
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 04 merge 1`] = `null`;

exports[`SHEET ## NATIVE ## 05 merge 1`] = `null`;

exports[`SHEET ## NATIVE ## 06 merge 1`] = `Object {}`;

exports[`SHEET ## NATIVE ## 07 merge 1`] = `
Object {
  "label": Array [
    Array [
      "color: green /*sheet.label*/",
    ],
  ],
  "root": Array [
    Array [
      "backgroundColor: green /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 08 merge 1`] = `
Object {
  "label": Array [
    Array [
      "color: red /*sheet.label*/",
    ],
  ],
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
    Array [
      "backgroundColor: green /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 09 merge 1`] = `
Object {
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
    Array [
      "backgroundColor: blue /*sheet.root/$native*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 10 with theme 1`] = `
Object {
  "label": Array [
    Array [
      "color: white /*sheet.label[0]*/",
      "backgroundColor: darkgreen /*sheet.label[0]*/",
    ],
    Array [
      "margin: 10 /*sheet.label[1]*/",
    ],
  ],
  "root": Array [
    Array [
      "backgroundColor: darkgreen /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 1`] = `
Object {
  "root": Object {
    "$web": Object {
      "color": "green",
    },
    "backgroundColor": "red",
  },
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 2`] = `
Object {
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 3`] = `
Object {
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 4`] = `
Object {
  "root": Array [
    Array [
      "backgroundColor: red /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## NATIVE ## 12 merge ERROR, sheets must be atomized first 1`] = `
Object {
  "label": Object {
    "color": "red",
    "type": "a",
  },
  "root": Array [
    Object {
      "backgroundColor": "red",
    },
    Array [
      "backgroundColor: green /*sheet.root*/",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 01 null 1`] = `null`;

exports[`SHEET ## WEB ## 02 {} 1`] = `Object {}`;

exports[`SHEET ## WEB ## 03 backgroundColor: 'red' 1`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 04 merge 1`] = `null`;

exports[`SHEET ## WEB ## 05 merge 1`] = `null`;

exports[`SHEET ## WEB ## 06 merge 1`] = `Object {}`;

exports[`SHEET ## WEB ## 07 merge 1`] = `
Object {
  "label": Array [
    Array [
      ".b { color:green /*sheet.label*/ }",
    ],
  ],
  "root": Array [
    Array [
      ".a { background-color:green /*sheet.root*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 08 merge 1`] = `
Object {
  "label": Array [
    Array [
      ".b { color:red /*sheet.label*/ }",
    ],
  ],
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
    Array [
      ".c { background-color:green /*sheet.root*/ }",
    ],
  ],
  "webOnly": Array [
    Array [
      ".d { color:green /*sheet.webOnly/$web*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 09 merge 1`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
    Array [
      ".b { color:green /*sheet.root/$web*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 10 with theme 1`] = `
Object {
  "label": Array [
    Array [
      ".d { color:white /*sheet.label[0]*/ }",
      ".c { background-color:darkgreen /*sheet.label[0]*/ }",
    ],
    Array [
      ".e { margin:10px /*sheet.label[1]*/ }",
    ],
  ],
  "root": Array [
    Array [
      ".c { background-color:darkgreen /*sheet.root*/ }",
    ],
  ],
  "webOnly": Array [
    Array [
      ".a { color:darkgray /*theme.secondary.disabled*/ }",
      ".b { background-color:blue /*theme.secondary.disabled*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 1`] = `
Object {
  "root": Object {
    "$web": Object {
      "color": "green",
    },
    "backgroundColor": "red",
  },
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 2`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
    Array [
      ".b { color:green /*sheet.root/$web*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 3`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
    Array [
      ".b { color:green /*sheet.root/$web*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 4`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red /*sheet.root*/ }",
    ],
    Array [
      ".b { color:green /*sheet.root/$web*/ }",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 12 merge ERROR, sheets must be atomized first 1`] = `
Object {
  "label": Object {
    "color": "red",
    "type": "a",
  },
  "root": Array [
    Object {
      "backgroundColor": "red",
    },
    Array [
      ".a { background-color:green /*sheet.root*/ }",
    ],
  ],
  "webOnly": Array [
    Array [
      ".b { color:green /*sheet.webOnly/$web*/ }",
    ],
  ],
}
`;
